# embedded-ip-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
events/: emitter.h  handler.cpp  handler.h
freertos/: task.h
src/: main.cpp
src/events/: emitter.cpp  emitter.h  handler.cpp  handler.h
src/util/: base64.cpp  json.cpp  json.h  url.cpp
src/websocket/: client.cpp  client.h
util/: base64.h  json.cpp  json.h  random.cpp  random.h  url.h
websocket/: client.cpp  client.h
